# sentient-robotics

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  Makefile  README.md  download_from_hf.py  lint.sh  pyproject.toml
.github/workflows/: ci.yml
decoupled_wbc/: README.md  __init__.py  controller.py  lower_body.py  upper_body.py
docs/: api_reference.md  conf.py  decoupled_wbc.md  deployment.md  gamepad_control.md  index.md  installation.md  keyboard_control.md  quickstart.md  sonic_overview.md  training.md  vr_teleop.md  zmq_comm.md
external_dependencies/: README.md  install_deps.sh
install_scripts/: install_isaac_gym.sh  install_sentient.sh
legal/: DCO.md  NOTICE  THIRD_PARTY_NOTICES.md
media/: architecture.mmd
sentient_sonic/: __init__.py
sentient_sonic/configs/: deploy_g1.yaml  teleop_vr.yaml  train_sonic_base.yaml  train_sonic_large.yaml
sentient_sonic/core/: __init__.py  config.py  env_wrapper.py  evaluator.py  export_onnx.py  network.py  policy.py  reward.py  trainer.py
sentient_sonic/data/: __init__.py  preprocessor.py
sentient_sonic/teleop/: __init__.py  cli.py  gamepad_controller.py  keyboard_controller.py  vr_controller.py
sentient_sonic/utils/: __init__.py  logger.py  motion_loader.py  retargeting.py  robot_definitions.py  transforms.py  zmq_comm.py
sentient_sonic_deploy/: CMakeLists.txt  __init__.py  cli.py
sentient_sonic_deploy/include/sentient_sonic/: inference_engine.h  robot_interface.h  safety_controller.h  state_estimator.h
sentient_sonic_deploy/src/: g1_deploy_onnx_ref.cpp  inference_engine.cpp  main_deploy.cpp  onnx_utils.cpp  robot_interface.cpp  safety_controller.cpp  state_estimator.cpp  test_inference.cpp  zmq_bridge.cpp
tests/: conftest.py  test_config.py  test_decoupled_wbc.py  test_policy.py  test_reward.py  test_robot_definitions.py  test_teleop.py  test_transforms.py
